# taskmgr-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  WIN7_COMPAT.md  build.rs  taskmgr.vcxproj  taskmgr.vcxproj.filters
assets/windows/: taskmgr.manifest
build_support/: icon_pipeline.rs  localization.rs  resources.rs  text_key_parser.rs
localization/: de.toml  en_us.toml  es.toml  fr.toml  pt.toml  ru.toml  zh_cn.toml  zh_tw.toml
scripts/: check-win7.ps1  release-clean.ps1
src/: app.rs  app_controllers.rs  assets.rs  background_worker.rs  chart_renderer.rs  cpu_details.rs  cpu_layout.rs  cpu_sampler.rs  cpu_topology.rs  cpupage.rs  dialog_templates.rs  drawing.rs  gpu_layout.rs  gpu_sampler.rs  gpupage.rs  language.rs  localization_terms.rs  localization_ui.rs  main.rs  menus.rs  netpage.rs  options.rs  pages.rs  perf_drawing.rs  perf_layout.rs  perfpage.rs  process_identity.rs  procpage.rs  resource.rs  runtime_menu.rs  system_sampler.rs  taskpage.rs  text_key_parser.rs  userpage.rs  winutil.rs
src/app/: controllers.rs  mod.rs  page_host.rs  page_registry.rs
src/config/: mod.rs  options.rs
src/infrastructure/: mod.rs  worker.rs
src/infrastructure/native/: errors.rs  handles.rs  mod.rs  safety.rs  ui.rs
src/localization/: text_key.rs
src/pages/: mod.rs  network.rs  users.rs
src/pages/applications/: icons.rs  mod.rs  sampler.rs
src/pages/cpu/: firmware.rs  layout.rs  mod.rs  model.rs  native.rs  pdh.rs  source_tests.rs
src/pages/gpu/: counters.rs  inventory.rs  layout.rs  metadata.rs  mod.rs  model.rs  source_tests.rs
src/pages/performance/: drawing.rs  layout.rs  mod.rs
src/pages/processes/: actions.rs  mod.rs  model.rs  sampler.rs
src/system/: cpu_sampler.rs  cpu_topology.rs  mod.rs  process_identity.rs  sampler.rs
src/ui/: assets.rs  charts.rs  dialogs.rs  drawing.rs  menus.rs  mod.rs  resource_ids.rs  runtime_menu.rs
src/ui/localization/: mod.rs  terms.rs  text_key.rs  ui.rs
tests/: resource_assets.rs  text_key_parse.rs
