# 项目构建入口。
# 这里定义包名、版本、发布构建策略，以及 Win32 API 绑定所需的功能开关。
[package]
name = "taskmgr"
version = "0.1.0"
edition = "2021"
build = "build.rs"
exclude = [".claude/**", ".tmp-pip/**", ".tmp-tests/**", ".vs/**"]

# 发布配置偏向生成体积更小、更接近系统工具风格的可执行文件。
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0
debug-assertions = false
incremental = false
overflow-checks = false

# 仅启用当前项目实际使用到的 Win32 模块，避免无关绑定进入最终产物。
[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Globalization",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Environment",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_System_RemoteDesktop",
    "Win32_System_Shutdown",
    "Win32_System_StationsAndDesktops",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_VirtualDosMachines",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi_Common",
] }
windows-numerics = "0.3.1"

[build-dependencies]
syn = { version = "2", features = ["full"] }
toml = "0.8"
winres = "0.1"

[dev-dependencies]
syn = { version = "2", features = ["full"] }
