# 项目构建入口。
# 这里定义包名、版本、发布构建策略，以及 Win32 API 绑定所需的功能开关。
[package]
name = "taskmgr-rs"
version = "0.1.2"
license = "GPL-2.0-only"
edition = "2024"
rust-version = "1.97"
build = "build.rs"
exclude = [".claude/**", ".tmp-pip/**", ".tmp-tests/**", ".vs/**"]

[package.metadata.winres]
FileDescription = "Windows NT Task Manager"
ProductName = "Windows NT Task Manager"
InternalName = "taskmgr"
OriginalFilename = "taskmgr.exe"
CompanyName = "JamesLinYJ"
LegalCopyright = "GNU General Public License v2.0"

[[bin]]
name = "taskmgr"
path = "src/main.rs"

# 任务管理器的采样、排序和绘图都在长期热路径上，发布构建优先运行效率。
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0
debug-assertions = false
incremental = false
overflow-checks = false

# 仅启用当前项目实际使用到的 Win32 模块，避免无关绑定进入最终产物。
[dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Globalization",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Environment",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_System_RemoteDesktop",
    "Win32_System_Shutdown",
    "Win32_System_StationsAndDesktops",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_VirtualDosMachines",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }
windows-numerics = "0.3.1"

[build-dependencies]
syn = { version = "2.0.119", features = ["full"] }
toml = "1.1.3"
winres = "0.1.12"

[dev-dependencies]
syn = { version = "2.0.119", features = ["full"] }
